# WMS

./: .dockerignore  .gitignore  AGENTS.md  BUGLOG.md  CHESTNY_ZNAK_PRODUCT_FIRST_TASKS_RU.md  CHESTNY_ZNAK_TASKS_RU.md  CHESTNY_ZNAK_UX_FIXES_RU.md  README.md  TASKLOG.md  WMS_REQUIREMENTS_TRACKER_RU.md  docker-compose.prod.yml  docker-compose.wms-host-8088.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  Dockerfile.railway  alembic_autogen.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 126fb26be297_inbound_intake_distribution_lines.py  20260410_0001_initial_tenants_users_sellers.py  20260411_0002_warehouse_location_product.py  20260411_0003_inbound_intake_requests.py  20260411_0004_inventory_posted_at.py  20260411_0005_inbound_line_storage_and_movements.py  20260411_0006_outbound_and_transfer_movements.py  20260411_0007_background_jobs.py  20260411_0008_outbound_line_shipped_qty.py  20260411_0009_inbound_created_by_seller.py  20260411_0010_request_seller_id.py  20260411_0011_seller_wildberries_credentials.py  20260411_0012_background_job_payload.py  20260411_0013_seller_wildberries_imported_cards.py  (+48 more)
backend/app/: celery_app.py  main.py
backend/app/api/: auth.py  (+22 more)
backend/tests/: conftest.py  inbound_box_intake_helpers.py  test_auth.py  test_background_jobs.py  test_box_import_service.py  test_catalog.py  test_document_number_service.py  test_health.py  test_inbound_box_acceptance.py  test_inbound_box_import_api.py  test_inbound_box_intake.py  test_inbound_distribution.py  test_inbound_intake.py  test_inbound_intake_api_be03.py  test_inbound_intake_box_ondemand.py  test_inbound_intake_service_be01.py  test_inbound_intake_service_sort_be01.py  test_inventory_atomic_increment.py  test_inventory_balances_summary.py  test_inventory_reservation.py  test_marketplace_unload_address_storage.py  test_marketplace_unload_and_discrepancy_acts.py  test_marketplace_unload_availability.py  test_marketplace_unload_completion.py  test_marketplace_unload_tsd_scan_contract.py  test_marking_catalog_product_print.py  test_marking_code_events.py  test_marking_codes.py  test_marking_credentials_api.py  test_marking_deprecated_openapi.py  test_marking_forecast.py  test_marking_import_pools.py  test_marking_inventory_api.py  test_marking_inventory_cz_filter.py  test_marking_inventory_personal_shared.py  test_marking_ledger_import_aggregate.py  test_marking_pdf_label_artifact.py  test_marking_pending.py  test_marking_pool_linked_products.py  test_marking_pool_products.py  (+52 more)
backend/wms_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+416 files in other folders)
